--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "nvl-guide",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "chimp-test": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --mocha --path=tests",
+    "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests"
   },
   "dependencies": {
+    "babel-runtime": "6.18.0",
     "meteor-node-stubs": "~0.2.0",
-    "babel-runtime": "6.18.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
+  },
+  "devDependencies": {
+    "chimp": "^0.47.2"
   }
 }
