--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "meteor run",
     "chimp-test": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --mocha --path=tests",
-    "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests"
+    "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests",
+    "meteor-test": "meteor test --driver-package=practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
@@ -15,6 +16,7 @@
     "react-router": "^3.0.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "chimp": "^0.47.2"
   }
 }
