--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "simpl-schema": "^0.2.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
