--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "meteor run",
     "chimp-test": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --mocha --path=tests",
-    "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests"
+    "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests",
+    "meteor-test": "meteor test --driver-package=practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
@@ -12,9 +13,11 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "simpl-schema": "^0.2.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "chimp": "^0.47.2"
   }
 }
