--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "meteor run",
     "chimp-test": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --mocha --path=tests",
     "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests",
-    "meteor-test": "meteor test --driver-package=practicalmeteor:mocha --port 4000"
+    "meteor-test": "meteor test --driver-package=practicalmeteor:mocha --port 4000",
+    "node-debug": "./node_modules/node-inspector/bin/node-debug.js --debug-port 5959"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
@@ -15,7 +16,8 @@
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "simpl-schema": "^0.2.2"
+    "simpl-schema": "^0.2.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
