Add functional frontend (#4)
* Add basic (untested) React components to explore UI options
* Add packages to support React, server side logging, and testing
* Enhance Meteor methods to support cleaner UI components and calls
* Setup simpl-schema's debug mode for easier schema fail triage
* Add font awesome support

--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
     "start": "meteor run",
     "chimp-test": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --mocha --path=tests",
     "chimp-watch": "node_modules/chimp/bin/chimp.js --ddp=http://localhost:3000 --watch --mocha --path=tests",
-    "meteor-test": "meteor test --driver-package=practicalmeteor:mocha"
+    "meteor-test": "meteor test --driver-package=practicalmeteor:mocha --port 4000",
+    "node-debug": "./node_modules/node-inspector/bin/node-debug.js --debug-port 5959"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
     "bcrypt": "^1.0.2",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "simpl-schema": "^0.2.2"
+    "simpl-schema": "^0.2.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chimp": "^0.47.2"
+    "chimp": "^0.47.2",
+    "enzyme": "^2.7.1",
+    "react-addons-test-utils": "^15.4.2",
+    "sinon": "^1.17.7"
   }
 }
